<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp" >

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_name"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/darker_gray" />

      <TextView
        android:id="@+id/txt_tech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_description"
        android:layout_marginTop="4dp"
        android:linksClickable="false"
        android:text="@string/tech"
        android:textColor="@android:color/darker_gray" />
    
    <TextView
        android:id="@+id/txt_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_tech"
        android:layout_marginTop="4dp"
        android:text="@string/company_name"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/txt_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_tech"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/cost"
        android:textColor="@android:color/black" />

</RelativeLayout>