<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="${relativePackage}.${activityClass}" >
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/name"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/txt_name"
        android:hint="@string/description"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_tech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_description"
        android:layout_marginTop="8dp"
        android:hint="@string/address"
        android:inputType="text"
        android:lines="2"
        android:maxLines="2"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

   
    
    <EditText
        android:id="@+id/txt_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_tech"
        android:layout_marginTop="8dp"
        android:hint="@string/cost"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <Spinner
        android:id="@+id/spinner_companies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_cost"
        android:layout_marginTop="8dp"
        android:prompt="@string/select_a_company"
        android:animateLayoutChanges="true"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_companies"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingBottom="2dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="2dp"
        android:text="@string/add"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>

</ScrollView>